<resources>
    <string name="app_name">Training app</string>
    <string name="welcome_text">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="students_made">Созданный студентами</string>
    <string name="offer_register_text">Зарегистрироваться</string>
    <string name="have_account_text">Уже есть аккаунт?</string>
    <string name="textRules">Нажимая на кнопку, вы соглашаетесь\n с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>
    <string name="login">Логин</string>
    <string name="register">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="offer_login_text">Войти</string>
    <string name="title_activity">Активность</string>
    <string name="title_personal">Профиль</string>
    <string name="title_my">Моя</string>
    <string name="title_users">Пользователей</string>
    <string name="title_never">Никогда</string>
    <string name="type_surfing">Серфинг</string>
    <string name="type_bicycle">Велосипед</string>
    <string name="type_jogging">Бег</string>
    <string name="type_swing">Качели</string>
    <string name="type_none">Бездельничаю 🛏</string>
    <string name="item_activity_text_length">0.00 км</string>
    <string name="item_activity_text_time">0 часов 0 минут</string>
    <string name="item_activity_text_date">0 секунд назад</string>
    <string name="item_activity_text_email">\@none</string>
    <string name="item_activity_text_start">14:38</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="guys_riding_bicycles">Guys riding bicycles</string>
    <string name="comment">Комментарий</string>
    <string name="name_or_nickname">Имя или никнейм</string>
    <string name="confirm_password">Подтвердить пароль</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="gender_other">Другое</string>
    <string name="start">Старт</string>
    <string name="delimiter">|</string>
    <string name="finish">Финиш</string>
    <string name="save">Сохранить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="exit_button">Выйти</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="new_password_confirm">Повторите пароль</string>
    <string name="confirm">Принять</string>
    <string name="start_activity_button">Start activity button</string>
    <string name="lets_go">Погнали? :)</string>
    <string name="start_activity">Начать</string>
    <string name="details">Детали</string>
    <string name="type_walking">Шаг</string>
</resources>