<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_activity">

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.example.trainingapp.ui.activity.ActivityFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.example.trainingapp.ui.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" />

    <fragment
        android:id="@+id/navigation_change_password"
        android:name="com.example.trainingapp.ui.personal.PasswordChangeFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_password_change" />

    <action
        android:id="@+id/action_personal_to_password"
        app:destination="@id/navigation_change_password" />

</navigation>