<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:elevation="2dp"

    android:background="@drawable/layout_bg_item"
>

    <FrameLayout
        android:id="@+id/main_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_min="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/item_activity_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/item_activity_text_length"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_activity_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/item_activity_text_time"
            android:layout_gravity="bottom"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/item_activity_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/item_activity_text_email"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/additional_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_info">

        <TextView
            android:id="@+id/item_activity_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="@string/type_none" />

        <TextView
            android:id="@+id/item_activity_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="24sp"
            tools:text="@string/item_activity_text_date" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>