<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/item_activity_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/item_activity_text_email" />

        <FrameLayout
            android:id="@+id/main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintHeight_min="60dp"
            app:layout_constraintTop_toBottomOf="@id/item_activity_email">

            <TextView
                android:id="@+id/item_activity_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/item_activity_text_length" />

            <TextView
                android:id="@+id/item_activity_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="16sp"
                tools:text="@string/item_activity_text_date" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/time_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintHeight_min="60dp"
            app:layout_constraintTop_toBottomOf="@id/main_info">

            <TextView
                android:id="@+id/item_activity_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/item_activity_text_time" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <RelativeLayout
                    android:id="@+id/start_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start">

                    <TextView
                        android:id="@+id/item_activity_start_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/item_activity_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_extra_small"
                        android:layout_toEndOf="@id/item_activity_start_text"
                        android:textSize="16sp"
                        tools:text="@string/item_activity_text_start" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/delimiter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/start_layout"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
                    android:text="@string/delimiter"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500" />


                <RelativeLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/delimiter">

                    <TextView
                        android:id="@+id/item_activity_finish_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finish"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/item_activity_finish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_extra_small"
                        android:layout_toEndOf="@id/item_activity_finish_text"
                        android:textSize="16sp"
                        tools:text="@string/item_activity_text_start" />
                </RelativeLayout>
            </RelativeLayout>


        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            app:boxBackgroundColor="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/time_info">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_activity_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:paddingVertical="@dimen/spacing_small"
                android:textColor="@color/dark_gray"
                tools:text="Я бежал очень сильно, даже ты так не сможешь" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/type_none" />


</androidx.constraintlayout.widget.ConstraintLayout>